análise de tempo concluida no rmd

--- a/Lista01/Questão03/analise.Rmd
+++ b/Lista01/Questão03/analise.Rmd
@@ -107,6 +107,13 @@ final
 ```
 
 ```{r}
-ggplot(data=final, aes(x=number, y=time), color = type) +
+ggplotly(
+ggplot(data=final, aes(x=number, y=time, color = type)) +
   geom_line()
+)
+
+ggplotly(
+ggplot(data=final, aes(x=number, y=cumulative, color = type)) +
+  geom_line()
+)
 ```
